// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostPreview /> renders correctly with categories 1`] = `
<ImageLink
  as="/post/slug"
  className="link"
  href="/post/[slug]"
  imageDescription=""
  imageProps={Object {}}
  images={
    Object {
      "large": "large_image",
      "medium": "medium_image",
      "small": "small_image",
    }
  }
>
  <div
    className="categoryContainer"
  >
    <CategoryTag
      backgroundColor="#FFFFFF"
      index={0}
      key="0"
      name="categoryName1"
      position="bottom"
      textColor="#000000"
    />
    <CategoryTag
      backgroundColor="#FFFFFF"
      index={1}
      key="1"
      name="categoryName1"
      position="bottom"
      textColor="#000000"
    />
  </div>
  <h2
    className="title"
  >
    title
  </h2>
</ImageLink>
`;

exports[`<PostPreview /> renders correctly without categories 1`] = `
<ImageLink
  as="/post/slug"
  className="link"
  href="/post/[slug]"
  imageDescription=""
  imageProps={Object {}}
  images={
    Object {
      "large": "large_image",
      "medium": "medium_image",
      "small": "small_image",
    }
  }
>
  <div
    className="categoryContainer"
  />
  <h2
    className="title"
  >
    title
  </h2>
</ImageLink>
`;
